--- a/bless_generator/pubspec.yaml
+++ b/bless_generator/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
     git:
       url: https://github.com/urusai/bless.git
       path: bless_annotation
+      ref: master
 
 dev_dependencies:
   lints: ^2.0.0
